adjusts spacing around share and fixed caption wdith on slider

--- a/styleguide/src/sass/components/_next-page.scss
+++ b/styleguide/src/sass/components/_next-page.scss
@@ -10,7 +10,7 @@
   background: transparent;
   display: block;
   border: 0;
-  margin: rhythm(1) auto;
+  margin: rhythm(1) auto 0;
   position: relative;
   text-align: center;
   width: 3.5rem;
